fix z-index

--- a/src/blocks/page-header/page-header.less
+++ b/src/blocks/page-header/page-header.less
@@ -98,6 +98,7 @@
 		margin-top: 10px;
 		opacity: 0;
 		transition: all 0.2s;
+		z-index: 10;
 
 		&:before {
 			content: '';
