--- a/src/blocks/slider/slider.less
+++ b/src/blocks/slider/slider.less
@@ -30,7 +30,7 @@
 		top: 0;
 		bottom: 0;
 		box-sizing: border-box;
-		z-index: 200;
+		z-index: 5;
 		cursor: pointer;
 		transition: all 0.3s;
 	}
